Fix footer styles on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,28 +124,24 @@
 .footer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
     background: var(--colorBlack);
-    border-top: 1px solid rgb(59, 59, 59);
-    margin-top: 20px;
-    padding: 10px;
+    align-items: center;
+    width: 100%;
     height: 130px;
+    justify-content: flex-end;
+    margin: 30px 0 20px 0;
 }
  
 .footer__info {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
     color: var(--colorText);
     font-family: var(--fontRoboto);
     font-size: 12px;
-    padding: 0 20px 10px;
+    margin-bottom: 5px;
 }
 
 .footer__info--motto {
-    font-family: var(--fontRoboto);
     color: var(--colorMotto);
     font-size: 10px;
 }
@@ -161,6 +157,9 @@
     order: -1;
     width: 90px;
     border-radius: 80px;
+    position: absolute;
+    padding-bottom: 5px;
+    margin: -55px 0 0 0;
 }
 
 @media all and (min-width: 768px) {
@@ -177,10 +176,13 @@
 
     .footer__info {
         padding: 0 20px;
+        margin-bottom: 0;
     }
     
     .footer__logo {
-        order: 0
+        position: relative;
+        margin: 0;
+        order: 0;
     }
 }
 
